--- a/NIC.html
+++ b/NIC.html
@@ -25,7 +25,7 @@
 <div class="container">
     <h1>NIC: Neural Image Coding</h1>
     <p class="note">Open-source machine learning powered image codec.</p>
-    <a href="" class="btn-outline-info">View on GitHub</a>
+    <a href="https://github.com/fvc-sg/NIC" class="btn-outline-info">View on GitHub</a>
     <h2>Introduction</h2>
     NIC aims at exploring the deep neural network based end-to-end solution for learned image compression.
     It is an on-going work. Current version (NIC-0.1) follow the design of Non-Local Attention optimization and
